# fast_api_do_zero

./: .dockerignore  Dockerfile
.github/workflows/: pipeline.yml
aula01-02/fast_zero/: .coverage  pyproject.toml
aula01-02/fast_zero/fast_zero/: app.py
aula01-02/fast_zero/tests/: test_app.py
aula01-03/: TODO.md
aula01-03/fast_zero/: pyproject.toml
aula01-03/fast_zero/fast_zero/: app.py
aula01-03/fast_zero/tests/: conftest.py  test_app.py
aula01-04/: TODO.md
aula01-04/fast_zero/: pyproject.toml
aula01-04/fast_zero/fast_zero/: app.py  schemas.py  settings.py
aula01-04/fast_zero/migrations/versions/: 32da89323036_create_users_table.py  797c20333338_create_updated_at_field.py
aula01-04/fast_zero/tests/: conftest.py  test_app.py  test_db.py
aula01-05/fast_zero/: pyproject.toml
aula01-05/fast_zero/fast_zero/: app.py
aula01-05/fast_zero/fast_zero/models/: user_model.py
aula01-05/fast_zero/fast_zero/schemas/: user_schema.py
aula01-05/fast_zero/migrations/: env.py
aula01-05/fast_zero/migrations/versions/: b578b66851dd_add_new_field_updated_at.py  c312ed15c3c6_create_users_table.py
aula01-05/fast_zero/tests/: conftest.py  test_app.py  test_db.py
aula01-06/: TODO.md
aula01-06/fast_zero/: pyproject.toml  settings.py
aula01-06/fast_zero/fast_zero/: app.py  models.py  schemas.py  security.py
aula01-06/fast_zero/migrations/: env.py
aula01-06/fast_zero/migrations/versions/: 4f9f5a813956_adiciona_campo_updated_at.py  bfbac6454fd4_create_users_table.py
aula01-06/fast_zero/tests/: conftest.py  test_app.py  test_db.py  test_security.py
aula01-07/fast_zero/: TODO.md  pyproject.toml  settings.py
aula01-07/fast_zero/fast_zero/: app.py  database.py  models.py  schemas.py  security.py
aula01-07/fast_zero/fast_zero/routers/: auth.py  users.py
aula01-07/fast_zero/migrations/: env.py
aula01-07/fast_zero/migrations/versions/: 2d69bfe0f160_create_users_table.py
aula01-07/fast_zero/tests/: conftest.py  test_auth.py  test_db.py  test_security.py  test_users.py
aula01-08/: TODO.md
aula01-08-09/: TODO.md
aula01-08-09/fast_zero/: pyproject.toml  settings.py
aula01-08-09/fast_zero/fast_zero/: app.py
aula01-08-09/fast_zero/fast_zero/routes/: auth.py  users.py
aula01-08-09/fast_zero/fast_zero/security/: auth.py
aula01-08-09/fast_zero/migrations/versions/: 051b4c1b8e90_create_users_table.py
aula01-08-09/fast_zero/tests/: conftest.py  test_db.py  test_login.py  test_security.py  test_users.py
aula01-08/fast_zero/: pyproject.toml
aula01-08/fast_zero/fast_zero/models/: user.py
aula01-08/fast_zero/fast_zero/routes/: auth.py  users.py
aula01-08/fast_zero/fast_zero/schemas/: filter.py  user.py
aula01-08/fast_zero/fast_zero/security/: auth.py
aula01-08/fast_zero/migrations/: env.py
aula01-08/fast_zero/tests/: conftest.py  test_auth.py  test_db.py  test_security.py  test_users.py
aula01-09/: TODO.md
aula01-10/: TODO.md
aula01-10/fast_zero/: .env_example  TODO.md  pyproject.toml  settings.py
aula01-10/fast_zero/fast_zero/: app.py
aula01-10/fast_zero/fast_zero/models/: todo.py  user.py
aula01-10/fast_zero/fast_zero/routes/: todos.py  token.py  users.py
aula01-10/fast_zero/fast_zero/schemas/: filters.py  todo.py  user.py
aula01-10/fast_zero/fast_zero/security/: auth.py
aula01-10/fast_zero/migrations/: env.py
aula01-10/fast_zero/tests/: conftest.py  test_db.py  test_login.py  test_security.py  test_todos.py  test_users.py
aula01-11/: TODO.md
aula01-11/fast_zero/: .dockerignore  TODO.md  docker-compose.yml  fly.toml  pyproject.toml  settings.py
aula01-11/fast_zero/fast_zero/: app.py
aula01-11/fast_zero/fast_zero/auth/: router.py  schemas.py  security.py
aula01-11/fast_zero/fast_zero/commons/: filters.py
aula01-11/fast_zero/fast_zero/database/: config.py
aula01-11/fast_zero/fast_zero/todo/: models.py  router.py  schemas.py
aula01-11/fast_zero/fast_zero/user/: models.py  router.py  schemas.py
aula01-11/fast_zero/migrations/: env.py
aula01-11/fast_zero/migrations/versions/: bfb3231de1d1_create_users_and_todos_tables.py
aula01-11/fast_zero/tests/: conftest.py
aula01-11/fast_zero/tests/auth/: test_security.py  test_token.py
aula01-11/fast_zero/tests/database/: test_db.py
aula01-11/fast_zero/tests/todo/: test_todo.py
aula01-11/fast_zero/tests/user/: test_users.py
aula01/fast_zero/: .gitignore  pyproject.toml
aula01/fast_zero/tests/: test_app.py
(+3 files in other folders)
