[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "diego",email = "oliveiraj.diego@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
pytest = "^8.3.5"
ruff = "^0.11.8"
pytest-cov = "^6.1.1"
ipdb = "^0.13.13"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

# ajustar para que os testes possam ser executados a partir de qualquer lugar
[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check' # checa todo codigo em busca de más práticas, codigo morto, etc.
pre_format = 'ruff check --fix' # corrige problemas encontrados com o check.
format = 'ruff format' # formata de acordo com estilo estabelecido
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -sx --cov=fast_zero -vv'
post_test = 'coverage html'
